<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginSuccessActivity">

    <LinearLayout
        android:layout_width="270dp"
        android:layout_height="321dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="100dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/textView_welcome" />

        <TextView
            android:id="@+id/textView_firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/textView_firstname" />

        <TextView
            android:id="@+id/textView_lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/textView_lastname" />

        <TextView
            android:id="@+id/textView_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/textView_username" />

        <TextView
            android:id="@+id/textView_emailaddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/textView_emailaddress" />

        <TextView
            android:id="@+id/textView_birthdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/textView_birthdate" />

        <TextView
            android:id="@+id/textView_mobilephone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:text="@string/textView_mobilephone" />

        <Button
            android:id="@+id/button_view_all_users"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:text="@string/button_view_all_users"
            android:textColor="@android:color/white" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>