<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="113dp"
    android:layout_weight="1"
    app:cardCornerRadius="4dp"
    app:cardUseCompatPadding="true"
    app:cardElevation="5dp">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="344dp"
        android:layout_height="113dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="392dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView_profilePic"
            android:layout_width="164dp"
            android:layout_height="102dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/avatar" />

        <LinearLayout
            android:layout_width="197dp"
            android:layout_height="102dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_AllUsers_FirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/textView_AllUsers_FirstName" />

            <TextView
                android:id="@+id/textView_AllUsers_LastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/textView_AllUsers_LastName" />

            <TextView
                android:id="@+id/textView_AllUsers_EmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textView_AllUsers_EmailAddress" />

        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>
